--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <title>Flag & Stone</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body><canvas></canvas></body>
-  <script src="script.js"></script>
+  <body>
+    <canvas></canvas>
+    <script src="script.js"></script>
+  </body>
 </html>
